# site_project

./: .gitignore  manage.py  pyproject.toml
base/: admin.py  models.py  views.py
base/migrations/: 0001_initial.py
base/templates/: index.html  script.js
cjosite/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
