[tool.poetry]
name = "site-project"
version = "0.1.0"
description = ""
authors = ["Francisco Cezar <franciscocezar.jr@outlook.com>"]
readme = "README.md"
packages = [{include = "site_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
